** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.14 beta
------------------------
  - Enhancement   #91 Ordered by IMDB-Ranking
  - Enhancement  #148 Enh: Get Metadata from tags
  - Fixed defect #196 Focus on alphabets or categories resets to 09 every time you press return on remote.
  - Enhancement  #294 Regenerate image files if local copies are newer than jukebox versions
  - Enhancement  #297 Updating Jukebox files based on updated NFO file
                      Scanner will now check for an updated NFO file, if there is a poster URL, it will force the download and use of that poster.
  - Enhancement  #298 Property to control the scanning of newer NFO files or not.
  - Fixed defect #299 Jukebox Cleanup causes null pointer failues
  - Enhancement  #300 Different Fanart for different tv seasons
  - Enhancement  #301 Episode plots made available in the xsl file
  - Fixed defect #302 Library path need to be standardised in the code, will now add a trailing "/" if needed
  - Fixed defect #303 Divider and spacer does not show up on the popcorn.
  - Fixed defect #304 When there is no full summary on IMDB the plot is set to NONE.
  - Enhancement  #328 Enable or Disable reading metadata from media files (Issue 148)
  - Fixed defect #329 thetvdb.com id in NFO files
  - Fixed defect #330 Genres collapsed too much
  - Added new YAMJ logo to gfb107 skins

MovieJukebox 1.0.13 beta
------------------------
  - Enhancement   #59 Use TheTVDB.com to look up TV series information
  - Enhancement   #76 Addition of a TV logo to TV Series
  - Enhancement   #86 Search NFO directory for nfo files as well
  - Enhancement  #101 Allow NFO file to override information from scanner
  - Fixed defect #119 Automatic clean up deleted movies (Use command line argument "-c")
  - Enhancement  #151 Season indicator on SD and Default skins for TV Series
  - Enhancement  #160 Vertical scroll