@@ -17,6 +17,9 @@ mjb.forcePostersOverwrite=false
 # Force the jukebox's HTML files to be overwritten
 mjb.forceHTMLOverwrite=false
 
+# Force the jukebox's HTML files to be overwritten
+mjb.forceFanartOverwrite=false
+
 # Default NMT path
 mjb.nmtRootPath=file:///opt/sybhttpd/localhost.drives/HARD_DISK/Video/
 
